syntax = "proto3";

package zitadel.application.v2;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/application/v2;application";

enum APIAuthMethodType {
  API_AUTH_METHOD_TYPE_BASIC = 0;
  API_AUTH_METHOD_TYPE_PRIVATE_KEY_JWT = 1;
}

message APIConfiguration {
  // The unique OAuth2 client_id used for authentication of the API,
  // e.g. at the introspection endpoint.
  string client_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"69629023906488334@ZITADEL\""}];

  // The authentication method type used by the API to authenticate at the introspection endpoint.
  APIAuthMethodType auth_method_type = 2;
}
